<resources>
    <string name="app_name">Beautification</string>
    <string name="face_beauty">Face Beauty</string>
    <string name="makeup">Makeup</string>
    <string name="make_photo">Make photo</string>
    <string name="reset">Reset</string>
    <string name="set_texture">Import</string>
    <string name="clear">Clear</string>
    <string name="rotate">Rotate</string>
    <string name="camera_fragment">CameraFragment</string>
    <string name="taken_photo">Taken photo</string>
    <string name="photo_fragment">PhotoFragment</string>
    <string name="gallery_fragment">GalleryFragment</string>
    <string name="texture_name">Name: </string>
    <string name="select_resource">Select</string>
</resources>